增加了chart貌似work的版本

--- a/fitlog/fastserver/templates/chart.html
+++ b/fitlog/fastserver/templates/chart.html
@@ -3,52 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,height=device-height">
-    <title>Fitlog chart</title>
-
+    <title>chart-{{log_dir}}</title>
+    <style>::-webkit-scrollbar{display:none;}html,body{overflow:auto;height:100%;margin:0;}</style>
     <link href="/static/css/bootstrap.css" rel="stylesheet" />
-    <link href="/static/css/bootstrap-table.css" rel="stylesheet" />
-
     <script src="/static/js/jquery.min.js"></script>
+    <script src="/static/js/bootstrap.js"></script>
+    <script src="/static/js/bootbox.js"></script>
+    <script>
+        var prompt = function (message, time) {
+            $("#alertDiv").delay(time || 5000).fadeOut();
+            const id  = "alertDiv_" + new Date().getTime() + "_" + (Math.random() * 10000).toFixed();
+            $("body").append(`
+            <div id="${id}" class="alert alert-success" role="alert" style="position: fixed; top: 12px; left: 12px;z-index:999999">
+                  ${message}
+                </div>
+            `);
+            const $alertDiv = $("#" + id);
+            $alertDiv.delay(time || 5000).fadeOut(() => {
+                $alertDiv.remove();
+            });
+        };
 
-    <script>/*Fixing iframe window.innerHeight 0 issue in Safari*/document.body.clientHeight;</script>
-    <script src="https://gw.alipayobjects.com/os/antv/pkg/_antv.g2-3.5.1/dist/g2.min.js"></script>
-    <script src="https://gw.alipayobjects.com/os/antv/pkg/_antv.data-set-0.10.1/dist/data-set.min.js"></script>
-    <script src="https://gw.alipayobjects.com/os/antv/assets/lib/jquery-3.2.1.min.js"></script>
+        // 成功提示
+        var success_prompt = function(message, time)
+        {
+            prompt(message, time);
+        };
 
-</head>
-<body>
-    <div id="toolbar" class="btn-group" style="margin-left: 20px">
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modal_box"
-                style="margin-left: 5px;margin-right: 5px" id="choose_lines">
-          <i class="glyphicon glyphicon-th icon-th"></i> Columns
-        </button>
-
-    </div>
-
-    <div class="modal fade" id="modal_box" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"
-            style="font-size: 18px">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title" id="myModalLabel">Select visible lines</h4>
-          </div>
-          <div class="modal-body col-xs-6" id="lines_div">
-
-          </div>
-          <div class="modal-footer" >
-            <button type="button" class="btn btn-default" data-dismiss="modal" id="modal_cancel">Cancel</button>
-            <button type="button" class="btn btn-primary" id="model_confirm">Confirm</button>
-          </div>
-        </div>
-      </div>
-    </div>
-
-<div id="mountNode" style="width: 80%"></div>
-<script>/*Fixing iframe window.innerHeight 0 issue in Safari*/document.body.clientHeight;</script>
-<script src="https://gw.alipayobjects.com/os/antv/pkg/_antv.g2-3.5.1/dist/g2.min.js"></script>
-<script src="https://gw.alipayobjects.com/os/antv/pkg/_antv.data-set-0.10.1/dist/data-set.min.js"></script>
-<script src="https://gw.alipayobjects.com/os/antv/assets/lib/jquery-3.2.1.min.js"></script>
+    </script>
 <style>
     .g2-legend {
         width: 250px !important;
@@ -57,327 +39,182 @@
         color: #595959 !important;
     }
 
-    .g2-legend-title {
-        color: #5a5a5a;
-        font-size: 14px;
-    }
-
     .g2-legend-list {
         margin-top: 10px !important
     }
 
-    .g2-legend-list-item {
-        width: 100%;
-        height: 30px;
-        margin-bottom: 10px
+    .g2-legend-text {
+        margin-top: 3px !important;
+        color: rgb(140, 140, 140);
+        display: inline-flex;
     }
 
-    .legend-item-name {
-        min-width:60px;
-        height: 100%;
-        float: left;
-        margin-left: 8px;
-        font-size: 10px;
-        color: #595959;
-        text-align: left;
-    }
-
-    .legend-item-name:after {
-        display: inline-block;
-        width: 0;
-        height: 100%;
-        vertical-align: middle;
-        content: '';
-    }
-
-    .legend-item-percent {
-        min-width: 30px;
-        height: 100%;
-        float: left;
-        margin-left: 10px;
-        font-size: 10px;
-        color: #949494;
-        text-align: left;
-    }
-
-    .legend-item-percent:after {
-        display: inline-block;
-        width: 0;
-        height: 100%;
-        vertical-align: middle;
-        content: '';
-    }
-
-    .legend-item-value {
-        min-width: 80px;
-        height: 100%;
-        float: left;
-        margin-left: 10px;
-        font-size: 10px;
-        color: #595959;
-        text-align: left;
-    }
-
-    .legend-item-value:after {
-        display: inline-block;
-        width: 0;
-        height: 100%;
-        vertical-align: middle;
-        content: '';
-    }
 </style>
+</head>
+<body>
+
+<h3 style="text-align:center;visibility: hidden;padding: 3px 0px 3px 0px" id="loss_title">loss trend in {{log_dir}}</h3>
+<div id="loss"></div>
+<div id="prompt"></div>
+<h3 style="text-align:center;visibility: hidden;padding: 3px 0px 3px 0px" id="metric_title">metric trend in {{log_dir}}</h3>
+<div id="metric"></div>
+<script>/*Fixing iframe window.innerHeight 0 issue in Safari*/document.body.clientHeight;</script>
+<script src="/static/js/g2.min.js"></script>
+
 <script>
-  var data = [{
-    year: 2013,
-    type: '食品烟酒',
-    value: 4127
-  }, {
-    year: 2013,
-    type: '衣着',
-    value: 1027
-  }, {
-    year: 2013,
-    type: '居住',
-    value: 2999
-  }, {
-    year: 2013,
-    type: '生活用品',
-    value: 806
-  }, {
-    year: 2013,
-    type: '交通通行',
-    value: 1627
-  }, {
-    year: 2013,
-    type: '文教娱',
-    value: 1398
-  }, {
-    year: 2013,
-    type: '医疗保健',
-    value: 912
-  }, {
-    year: 2013,
-    type: '其他',
-    value: 325
-  }, {
-    year: 2014,
-    type: '食品烟酒',
-    value: 4494
-  }, {
-    year: 2014,
-    type: '衣着',
-    value: 1099
-  }, {
-    year: 2014,
-    type: '居住',
-    value: 3201
-  }, {
-    year: 2014,
-    type: '生活用品',
-    value: 890
-  }, {
-    year: 2014,
-    type: '交通通行',
-    value: 1869
-  }, {
-    year: 2014,
-    type: '文教娱',
-    value: 1536
-  }, {
-    year: 2014,
-    type: '医疗保健',
-    value: 1045
-  }, {
-    year: 2014,
-    type: '其他',
-    value: 358
-  }, {
-    year: 2015,
-    type: '食品烟酒',
-    value: 4814
-  }, {
-    year: 2015,
-    type: '衣着',
-    value: 1164
-  }, {
-    year: 2015,
-    type: '居住',
-    value: 3419
-  }, {
-    year: 2015,
-    type: '生活用品',
-    value: 951
-  }, {
-    year: 2015,
-    type: '交通通行',
-    value: 2087
-  }, {
-    year: 2015,
-    type: '文教娱',
-    value: 1723
-  }, {
-    year: 2015,
-    type: '医疗保健',
-    value: 1165
-  }, {
-    year: 2015,
-    type: '其他',
-    value: 389
-  }, {
-    year: 2016,
-    type: '食品烟酒',
-    value: 5151
-  }, {
-    year: 2016,
-    type: '衣着',
-    value: 1203
-  }, {
-    year: 2016,
-    type: '居住',
-    value: 3746
-  }, {
-    year: 2016,
-    type: '生活用品',
-    value: 1044
-  }, {
-    year: 2016,
-    type: '交通通行',
-    value: 2338
-  }, {
-    year: 2016,
-    type: '文教娱',
-    value: 1915
-  }, {
-    year: 2016,
-    type: '医疗保健',
-    value: 1307
-  }, {
-    year: 2016,
-    type: '其他',
-    value: 406
-  }];
-  var yearSum = getYearsum();
-  var yearPercent = getYearPercent(yearSum);
-  var chart = new G2.Chart({
-    container: 'mountNode',
-    forceFit: true,
-    height: window.innerHeight,
-    padding: [20, 210, 30, 50]
-  });
-  chart.source(data, {
-    year: {
-      type: 'timeCat',
-      range: [0, 1]
-    }
-  });
-  chart.axis('year', {
-    label: {
-      textStyle: {
-        fill: '#aaaaaa'
-      }
-    }
-  });
-  chart.axis('value', {
-    label: {
-      textStyle: {
-        fill: '#aaaaaa'
-      },
-      formatter: function formatter(text) {
-        return text.replace(/(\d)(?=(?:\d{3})+$)/g, '$1,');
-      }
-    }
-  });
-  chart.legend({
-    useHtml: true,
-    position: 'right',
-    reactive: true,
-    legendStyle: {
-      MARKER_CLASS: {
-        width: '18px',
-        height: '18px',
-        lineHeight: '18px',
-        borderRadius: '50px',
-        display: 'inline-block',
-        marginRight: '4px',
-        textAlign: 'center',
-        fontZize: '10px',
-        marginTop: '3px',
-        color: 'white',
-        float: 'left',
-        borderStyle: 'solid',
-        borderWidth: '1px',
-        borderColor: '#ccc'
-      }
-    },
-    containerTpl: '<div class="g2-legend">2016 年支出排行<div class="g2-legend-list"></div></div>',
-    itemTpl: function itemTpl(value, color, checked, index) {
-      var markerDom = '<div class="g2-legend-marker" style="background-color:' + color + '">' + (index + 1) + '</div>';
-      var nameDom = '<div class="legend-item-name">' + value + '</div>';
-      var percentDom = '<div class="legend-item-percent">' + yearPercent[value].percent.toFixed(2) + '</div>';
-      var valueDom = '<div class="legend-item-value">' + yearPercent[value].value + '</div>';
-      return '<div class="g2-legend-list-item" data-value="' + value + '">' + markerDom + nameDom + percentDom + valueDom + '</div>';
-    }
-  });
-  chart.line().position('year*value').color('type', ['#ff4d4f', '#ff7a45', '#ffa940', '#facc14', '#bae637', '#73d13d', '#36cfc9', '#40a9ff']);
-  chart.render();
+  var data=JSON.parse('{{data|tojson}}');
+  var max_steps = '{{max_steps}}';
+  window.chart_uuid = '{{chart_uuid}}';
+  window.server_uuid = '{{server_uuid}}';
+  window.log_dir = '{{log_dir}}';
+  var finish = 'finish' in data;
 
-  function getYearsum() {
-    var sum = 0;
-    for (var i = 0; i < data.length; i++) {
-      var d = data[i];
-      if (d.year === 2016) {
-        sum += d.value;
+  function create_chart(container, data){
+      document.getElementById(container + '_title').style.visibility = 'visible';
+      var chart = new G2.Chart({
+        container: container,
+        forceFit: true,
+        height: document.body.clientHeight*0.40,
+        padding: [20, 210, 30, 50],
+      });
+      if(data.length>max_steps){
+          data = data.slice(-max_steps);
       }
+      chart.source(data, {
+        step: {
+          range: [0, 1]
+        }
+      });
+      chart.tooltip({
+        useHtml:true,
+        crosshairs: {
+          type: 'line'
+        },
+        showTitle:false
+      });
+      // 使得两组颜色不一样
+      if(container==='loss'){
+          chart.line().position('step*value').color('name', ['#ff4d4f', '#ff7a45', '#ffa940', '#facc14', '#bae637',
+              '#73d13d', '#36cfc9', '#40a9ff']).shape('smooth');
+          chart.point().position('step*value').color('name', ['#ff4d4f', '#ff7a45', '#ffa940', '#facc14', '#bae637',
+              '#73d13d', '#36cfc9', '#40a9ff']).size(5).shape('circle').style({
+            stroke: '#fff',
+            lineWidth: 1
+          }).tooltip('name*epoch*step*value');
+      }else{
+          chart.line().position('step*value').color('name');
+          chart.point().position('step*value').color('name').size(5).shape('circle').style({
+            stroke: '#fff',
+            lineWidth: 1
+          }).tooltip('name**epoch*step*value');
+      }
+
+      chart.axis('step', {
+
+      });
+
+      chart.legend({
+        useHtml: true,
+        position: 'right-center',
+        reactive: true,
+        legendStyle: {
+          MARKER_CLASS: {
+            width: '18px',
+            height: '18px',
+            lineHeight: '18px',
+            borderRadius: '50px',
+            display: 'inline-block',
+            marginRight: '4px',
+            textAlign: 'center',
+            fontZize: '10px',
+            marginTop: '3px',
+            color: 'white',
+            float: 'left',
+            borderStyle: 'solid',
+            borderWidth: '1px',
+            borderColor: '#ccc'
+          }
+        },
+        containerTpl: '<div class="g2-legend" style="font-weight: bold;font-size: 20px">Choose what to show' +
+            '<div class="g2-legend-list"></div></div>',
+      });
+      chart.render();
+      return chart;
     }
-    return sum;
+  var charts = {};
+
+  var loss_data;
+  var metric_data;
+
+  if('loss' in data){
+      loss_data = data['loss'];
+    charts['loss'] = create_chart('loss', loss_data);
   }
 
-  function getYearPercent(sum) {
-    var percentage = {};
-    for (var i = 0; i < data.length; i++) {
-      var d = data[i];
-      if (d.year === 2016) {
-        percentage[d.type] = {
-          percent: d.value / sum,
-          value: d.value
-        };
-      }
-    }
-    return percentage;
+  if('metric' in data){
+      metric_data = data['metric'];
+    charts['metric'] = create_chart('metric', metric_data);
   }
+
+  if(!finish){
+      get_new_steps();
+  }else{
+      success_prompt("All data have been loaded.", 2000);
+  }
+
+function get_new_steps(){
+    var tmp = setInterval(function(){
+        $.ajax({
+            url: '/chart/new_step',
+            type: 'POST',
+            dataType: 'json',
+            contentType: 'application/json;charset=UTF-8',
+            data: JSON.stringify({
+                 chart_uuid: window.chart_uuid
+            }),
+            success: function(value){
+                value = value['steps'];
+                for(var key in value){
+                    if(key==='finish'){
+                        continue;
+                    }
+                    var _steps = value[key];
+                    if(!(key in data)){
+                        data[key] = [];
+                    }
+                    if(_steps.length>0){
+                        for(var index=0;index<_steps.length;index++){
+                            data[key].push(_steps[index]);
+                            if(data[key].length>max_steps){
+                                data[key].shift();
+                            }
+                            if(!(key in charts)){
+                                charts[key] = create_chart(key, data[key]);
+                            }else{
+                                var _chart = charts[key];
+                                _chart.changeData(data[key]);
+                            }
+                        }
+                    }
+                }
+                if('finish' in value){
+                    stop_interval(tmp);
+                    bootbox.alert("Finish accessing data.");
+                    // 弹出提示，结束了。
+                }
+            },
+            error: function(error){
+                bootbox.alert("Some error happens, stop updating data.");
+                stop_interval(tmp);
+            }
+        });
+  }, 3000);
+}
+
+function stop_interval(tmp) {
+    clearInterval(tmp)
+}
+
 </script>
 </body>
-
-<script>
-    var $choose_lines = $("#choose_lines");
-
-    $choose_lines.click(function () {
-       var hiddable_columns = window.hiddable_columns;
-       var hidden_columns = window.hidden_columns;
-       for(var idx in hiddable_columns)
-      {
-          var checked;
-          checked = hidden_columns.indexOf(hiddable_columns[idx]) === -1;
-          if(checked)
-          {
-              checked = 'checked'
-          }else {
-              checked = ""
-          }
-
-          $("#modal_div").append("<div class=\"pretty p-default col-sm-10\"><input type='checkbox' " +
-              checked + " name='modal-check-box' style='min-width:20px;margin-left: 5px;margin-right: 5px;'/>" +
-              "<div class='state p-primary'><label>" + hiddable_columns[idx] + "</checkbox></label></div></div>");
-      }
-       if(hiddable_columns.length===0)
-       {
-           $("#modal_div").append("All columns are must be set as visible.");
-       }
-
-   });
-
-
-
-</script>
-
 </html>
