--- a/fitlog/fastserver/templates/chart.html
+++ b/fitlog/fastserver/templates/chart.html
@@ -62,6 +62,7 @@
 <script src="/static/js/g2.min.js"></script>
 
 <script>
+  var update_every=parseInt('{{update_every}}');
   var data=JSON.parse('{{data|tojson}}');
   var max_steps = '{{max_steps}}';
   window.chart_uuid = '{{chart_uuid}}';
@@ -208,7 +209,7 @@ function get_new_steps(){
                 stop_interval(tmp);
             }
         });
-  }, 3000);
+  }, update_every);
 }
 
 function stop_interval(tmp) {
