1. 修复chartbug，多显示了内容;2.删减chart中显示内容;3.增加html中的图标

--- a/fitlog/fastserver/templates/chart.html
+++ b/fitlog/fastserver/templates/chart.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,height=device-height">
+    <link rel="shortcut icon" href="/chart.ico" >
     <title>chart-{{log_dir}}</title>
     <style>::-webkit-scrollbar{display:none;}html,body{overflow:auto;height:100%;margin:0;}</style>
     <link href="/static/css/bootstrap.css" rel="stylesheet" />
@@ -120,7 +121,7 @@
         reactive: true,
         legendStyle: {
           MARKER_CLASS: {
-            width: '18px',
+            width: '20px',
             height: '18px',
             lineHeight: '18px',
             borderRadius: '50px',
