--- a/fitlog/fastserver/templates/table.html
+++ b/fitlog/fastserver/templates/table.html
@@ -3,7 +3,8 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Fitlog Table</title>
-     <link rel="shortcut icon" href="#" />
+     <!--<link rel="shortcut icon" href="#" />-->
+    <link rel="shortcut icon" href="/table.ico" >
 
     <link href="/static/css/bootstrap.css" rel="stylesheet" />
     <link href="/static/css/bootstrap-table.css" rel="stylesheet" />
